<resources>
    <string name="app_name">TrendyShop</string>
    <string name="login">LOGIN</string>

    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="forgot_password">Forgot password</string>
    <string name="loginbtn">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="choose_image">Choose image</string>
    <string name="cart">Cart</string>
    <string name="payment_methods">Payment methods:</string>
    <string name="total_payment">Total payment:</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone number:</string>
    <string name="navigation_drawer_open">open\n</string>
    <string name="navigation_drawer_close">close\n</string>
    <string name="title_toolbar"><b>Trendy Shop</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_order"><b>Order</b></string>
    <string name="title_Details"><b>Details</b></string>
    <string name="title_Delivety"><b>Delivery Address</b></string>
    <string name="title_payment"><b>Payment</b></string>
    <string name="title_promo"><b>Promo Cord</b></string>
    <string name="title_Notification"><b>Notification</b></string>
    <string name="title_help"><b>Help</b></string>
    <string name="title_about"><b>About</b></string>
    <string name="title_changePass"><b>Change password</b></string>
    <string name="title_orderhistory"><b>Order history</b></string>
    <string name="title_home"><b>Trendy Shop</b></string>
    <string name="yay_you_re_back_login_to_get_started">Yay! You\'re back! Login to get started</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="get_s_started_with_trendy_shop">Get’s started with Trendy Shop.</string>
</resources>