<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#121223"
    android:scrollbars="vertical"
    tools:context=".view.activities.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse_10051"/>
        <ImageView
            android:layout_width="170dp"
            android:layout_height="60dp"
            app:tint="#00C1AF"
            android:src="@drawable/logo_trendy"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/vector_142"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome Back !"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="#fff"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_to_get_started"
                android:textColor="#fff"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="monospace"
                android:textColor="#fff"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="30sp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:padding="20dp"
                android:background="@drawable/white_card">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:id="@+id/tilEmail">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:id="@+id/edEmail"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    android:layout_below="@id/tilEmail"
                    android:layout_marginTop="35dp"
                    android:id="@+id/tilPass">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:id="@+id/edPass"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="#3F51B5"
                    android:layout_below="@id/tilPass"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="25dp"
                    android:id="@+id/btnForgot"/>
                <FrameLayout
                    android:id="@+id/layoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_below="@id/btnForgot">
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        app:cornerRadius="7dp"
                        android:backgroundTint="#1F1F3E"
                        android:text="@string/loginbtn"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:id="@+id/btnLogin"/>
                    <ProgressBar
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:id="@+id/progressBar"
                        android:visibility="invisible"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutLogin"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/btnGotoSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="#3F51B5"
                        android:layout_marginStart="10dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>