<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".view.activities.PayOrderActivity">

    <FrameLayout
        android:id="@+id/fragmentContainer_payOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#121223"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:tint="#fff"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/payment_confirmation"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_order_header"
        android:layout_width="381dp"
        android:layout_height="200dp"
        android:layout_below="@+id/layout_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Order details"
                android:textColor="#121223"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edNameCustomOrder"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/khung_qtt"
                android:gravity="center_vertical|start"
                android:hint="Name:"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/edPhoneCustomOrder"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/khung_qtt"
                android:hint="@string/phone_number"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edAddressCustomOrder"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/khung_qtt"
                android:ellipsize="end"
                android:hint="@string/address"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_method_pay"
        android:layout_below="@+id/layout_order_header"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />


    <LinearLayout
        android:id="@+id/layout_method_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_total"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/method_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:text="@string/payment_methods"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMethodPay"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:gravity="end"
            android:text="Select here"
            android:textColor="#6D001F"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutThanhToan"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalSl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_payment"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTotalOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="0"
            android:textColor="#6D001F"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layoutThanhToan"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_thanh_toan_order"
            android:layout_width="327dp"
            android:backgroundTint="#121223"
            app:cornerRadius="7dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:text="Buy"
            android:textSize="18sp" />
        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/progressBar"/>
    </FrameLayout>

</RelativeLayout>