<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8475fe"
    android:scrollbars="vertical"
    tools:context=".view.activities.SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse_10051" />

        <View
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:alpha="0.5"
            android:background="@drawable/image1" />
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/bg_oval"
            android:padding="5dp"
            android:src="@drawable/ic_back" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:text="@string/get_s_started_with_trendy_shop"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_card"
                android:padding="20dp">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/sen"
                    android:text="Email"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilEmail"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:fontFamily="@font/sen"
                    android:layout_marginTop="10dp"
                    android:text="Name"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/pas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/til_fullname"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/sen"
                    android:text="Password"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pas"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_key">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/repas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilPass"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/sen"
                    android:text="Confirm Password"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilRePass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/repas"
                    app:startIconDrawable="@drawable/ic_key"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edRePass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:id="@+id/layoutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilRePass"
                    android:layout_marginTop="25dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="#1F1F3E"
                        android:text="SIGN UP"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        app:cornerRadius="7dp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:visibility="invisible" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutBtn"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/btnGotoLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/login"
                        android:textColor="#3F51B5"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>